force-app/main/default/objects/Temparature__c/Temparature__c.object-meta.xml
<CustomObject>
    <label>Temparature</label>
    <nameField>
        <label>Temparature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temparatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>