force-app/main/default/objects/Temparature__c/fields/Temperature_UOM_From__c.field-meta.xml
<CustomField>
    <fullName>Temperature_UOM_From__c</fullName>
    <label>Temperature UOM From</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deg F</fullName>
            </value>
            <value>
                <fullName>Deg C</fullName>
            </value>
            <value>
                <fullName>Deg R</fullName>
            </value>
            <value>
                <fullName>Deg K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>