force-app/main/default/objects/Temparature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Temperature_UOM_From__c</columns>
    <columns>Temperature_UOM_To__c</columns>
    <columns>Divider__c</columns>
    <columns>Multiplier__c</columns>
    <columns>Adder__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>